--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">GitHub</a>
+            <a class="nav-link active" aria-current="page" href="https://github.com/AlxMarz">GitHub</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">link</a>
