--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
           <a href="https://github.com/garciajv86/SunsetSunriseTimes" class="btn btn-primary">GitHub.</a>
         </div>
       </div>
+    <div class="card">
+        <div class="card-body ">
+          <h5 class="card-title">music streamer project 2</h5>
+          <p class="card-text">group project 2</p>
+          <a href="https://github.com/ColtenZimm/Music_streaming" class="btn btn-primary">GitHub.</a>
+        </div>
+      </div>
     
     
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
